; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/touchscreen/extr_da9034-ts.c_da9034_touch_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/touchscreen/extr_da9034-ts.c_da9034_touch_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_dev = type { i32 }
%struct.da9034_touch = type { i32, i32, i32 }

@DA9034_EVENT_PEN_DOWN = common dso_local global i32 0, align 4
@DA9034_EVENT_TSI_READY = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@DA9034_MANUAL_CTRL = common dso_local global i32 0, align 4
@DA9034_LDO_ADC_EN = common dso_local global i32 0, align 4
@DA9034_TSI_CTRL1 = common dso_local global i32 0, align 4
@DA9034_TSI_CTRL2 = common dso_local global i32 0, align 4
@STATE_IDLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.input_dev*)* @da9034_touch_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @da9034_touch_open(%struct.input_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.input_dev*, align 8
  %4 = alloca %struct.da9034_touch*, align 8
  %5 = alloca i32, align 4
  store %struct.input_dev* %0, %struct.input_dev** %3, align 8
  %6 = load %struct.input_dev*, %struct.input_dev** %3, align 8
  %7 = call %struct.da9034_touch* @input_get_drvdata(%struct.input_dev* %6)
  store %struct.da9034_touch* %7, %struct.da9034_touch** %4, align 8
  %8 = load %struct.da9034_touch*, %struct.da9034_touch** %4, align 8
  %9 = getelementptr inbounds %struct.da9034_touch, %struct.da9034_touch* %8, i32 0, i32 1
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.da9034_touch*, %struct.da9034_touch** %4, align 8
  %12 = getelementptr inbounds %struct.da9034_touch, %struct.da9034_touch* %11, i32 0, i32 2
  %13 = load i32, i32* @DA9034_EVENT_PEN_DOWN, align 4
  %14 = load i32, i32* @DA9034_EVENT_TSI_READY, align 4
  %15 = or i32 %13, %14
  %16 = call i32 @da903x_register_notifier(i32 %10, i32* %12, i32 %15)
  store i32 %16, i32* %5, align 4
  %17 = load i32, i32* %5, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %1
  %20 = load i32, i32* @EBUSY, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %2, align 4
  br label %59

22:                                               ; preds = %1
  %23 = load %struct.da9034_touch*, %struct.da9034_touch** %4, align 8
  %24 = getelementptr inbounds %struct.da9034_touch, %struct.da9034_touch* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* @DA9034_MANUAL_CTRL, align 4
  %27 = load i32, i32* @DA9034_LDO_ADC_EN, align 4
  %28 = call i32 @da903x_set_bits(i32 %25, i32 %26, i32 %27)
  store i32 %28, i32* %5, align 4
  %29 = load i32, i32* %5, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %33

31:                                               ; preds = %22
  %32 = load i32, i32* %5, align 4
  store i32 %32, i32* %2, align 4
  br label %59

33:                                               ; preds = %22
  %34 = load %struct.da9034_touch*, %struct.da9034_touch** %4, align 8
  %35 = getelementptr inbounds %struct.da9034_touch, %struct.da9034_touch* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 4
  %37 = load i32, i32* @DA9034_TSI_CTRL1, align 4
  %38 = call i32 @da903x_write(i32 %36, i32 %37, i32 27)
  store i32 %38, i32* %5, align 4
  %39 = load i32, i32* %5, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %43

41:                                               ; preds = %33
  %42 = load i32, i32* %5, align 4
  store i32 %42, i32* %2, align 4
  br label %59

43:                                               ; preds = %33
  %44 = load %struct.da9034_touch*, %struct.da9034_touch** %4, align 8
  %45 = getelementptr inbounds %struct.da9034_touch, %struct.da9034_touch* %44, i32 0, i32 1
  %46 = load i32, i32* %45, align 4
  %47 = load i32, i32* @DA9034_TSI_CTRL2, align 4
  %48 = call i32 @da903x_write(i32 %46, i32 %47, i32 0)
  store i32 %48, i32* %5, align 4
  %49 = load i32, i32* %5, align 4
  %50 = icmp ne i32 %49, 0
  br i1 %50, label %51, label %53

51:                                               ; preds = %43
  %52 = load i32, i32* %5, align 4
  store i32 %52, i32* %2, align 4
  br label %59

53:                                               ; preds = %43
  %54 = load i32, i32* @STATE_IDLE, align 4
  %55 = load %struct.da9034_touch*, %struct.da9034_touch** %4, align 8
  %56 = getelementptr inbounds %struct.da9034_touch, %struct.da9034_touch* %55, i32 0, i32 0
  store i32 %54, i32* %56, align 4
  %57 = load %struct.da9034_touch*, %struct.da9034_touch** %4, align 8
  %58 = call i32 @detect_pen_down(%struct.da9034_touch* %57, i32 1)
  store i32 0, i32* %2, align 4
  br label %59

59:                                               ; preds = %53, %51, %41, %31, %19
  %60 = load i32, i32* %2, align 4
  ret i32 %60
}

declare dso_local %struct.da9034_touch* @input_get_drvdata(%struct.input_dev*) #1

declare dso_local i32 @da903x_register_notifier(i32, i32*, i32) #1

declare dso_local i32 @da903x_set_bits(i32, i32, i32) #1

declare dso_local i32 @da903x_write(i32, i32, i32) #1

declare dso_local i32 @detect_pen_down(%struct.da9034_touch*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
